fix(encryptionKey): align dim and issuerComponent config
Refs: #358

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -268,18 +268,18 @@ spec:
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__CALLBACKURL"
               value: "{{ .Values.portalBackendAddress }}"
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGINDEX"
-              value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigIndex }}"
+              value: "{{ .Values.backend.processesworker.dim.encryptionConfigIndex }}"
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__INDEX"
-              value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigs.index0.index }}"
+              value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.index }}"
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__ENCRYPTIONKEY"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
-                  key: "issuercomponent-encryption-key0"
+                  key: "dim-encryption-key0"
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__CIPHERMODE"
-              value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigs.index0.cipherMode }}"
+              value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.cipherMode }}"
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__PADDINGMODE"
-              value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigs.index0.paddingMode }}"
+              value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.paddingMode }}"
             - name: "BPNDIDRESOLVER__BASEADDRESS"
               value: "{{ .Values.bpnDidResolver.managementApiAddress }}"
             - name: "BPNDIDRESOLVER__APIKEY"
