fix(roles): update role name for approval notifications
Currently Service Manager receives notifications regarding app approval process.

Refs:  #370

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -500,7 +500,7 @@ backend:
       role1: "Company Admin"
     approveAppUserRoles:
       role0: "Sales Manager"
-      role1: "Service Manager"
+      role1: "App Manager"
     activationUserRoles:
       role0: "Sales Manager"
       role1: "App Manager"
