--- a/environments/consortia/argocd-app-templates/appsetup-int.yaml
+++ b/environments/consortia/argocd-app-templates/appsetup-int.yaml
@@ -28,7 +28,7 @@ spec:
   source:
     path: charts/portal
     repoURL: 'https://github.com/eclipse-tractusx/portal.git'
-    targetRevision: portal-2.1.0-RC3
+    targetRevision: portal-2.1.0
     plugin:
       env:
         - name: AVP_SECRET
