--- a/charts/portal/templates/deployment-backend-notification.yaml
+++ b/charts/portal/templates/deployment-backend-notification.yaml
@@ -38,11 +38,9 @@ spec:
         app: {{ include "portal.fullname" . }}-{{ .Values.backend.notification.name }}
         {{- include "portal.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.backend.notification.image.imagePullSecrets }}
-      imagePullSecrets:
-        {{- range . }}
-        - name: {{ .name }}
-        {{- end }}
+      {{- with .Values.backend.notification.image.pullSecrets }}
+      pullSecrets:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       containers:
       - name: {{ include "portal.fullname" . }}-{{ .Values.backend.notification.name }}
