--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -39,7 +39,7 @@ spec:
         {{- include "portal.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.backend.registration.image.pullSecrets }}
-      pullSecrets:
+      imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       containers:
