feat(portal): add imagePullScrets (#396)
The imagePullSecrets field allows you to specify secrets needed to pull Docker images from private repositories.

In many organizations, container images are stored in private registries rather than public ones for security and compliance reasons. To pull these images, Kubernetes needs credentials, which are provided via imagePullSecrets. This code dynamically includes the necessary secrets for pulling images, based on the configuration provided in the Helm chart's values file.

--- a/charts/portal/templates/deployment-frontend-assets.yaml
+++ b/charts/portal/templates/deployment-frontend-assets.yaml
@@ -38,6 +38,10 @@ spec:
         app: {{ include "portal.fullname" . }}-{{ .Values.frontend.assets.name }}
         {{- include "portal.selectorLabels" . | nindent 8 }}
     spec:
+      {{- with .Values.frontend.assets.image.pullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       - name: {{ include "portal.fullname" . }}-{{ .Values.frontend.assets.name }}
         securityContext:
