feat(sdFactory): add clearinghouseConnectDisabled to config
Refs: https://github.com/eclipse-tractusx/portal-backend/issues/837

--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -441,6 +441,8 @@ spec:
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHelpPath }}"
         - name: "REGISTRATION__USEDIMWALLET"
           value: "{{ .Values.backend.useDimWallet }}"
+        - name: "REGISTRATION__CLEARINGHOUSECONNECTDISABLED"
+          value: "{{ .Values.backend.processesworker.clearinghouseConnectDisabled }}"
         - name: "SERVICEACCOUNT__CLIENTID"
           value: "{{ .Values.backend.administration.serviceAccount.clientId }}"
         - name: "SERVICEACCOUNT__ENCRYPTIONCONFIGINDEX"
