--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -113,6 +113,10 @@ spec:
           value: "{{ .Values.backend.processesworker.bpdm.scope }}"
         - name: "APPLICATIONCHECKLIST__BPDM__USERNAME"
           value: "{{ .Values.backend.placeholder }}"
+        - name: "APPLICATIONCHECKLIST__BPDM__USEDIMWALLET"
+          value: "{{ .Values.backend.useDimWallet }}"
+        - name: "APPLICATIONCHECKLIST__BPDM__STARTASREADY"
+          value: "{{ .Values.backend.bpdmStartAsReady }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__BASEADDRESS"
           value: "{{ .Values.clearinghouseAddress }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTID"
