chore(env): extend cors-allow-origin

--- a/environments/helm-values/values-int.yaml
+++ b/environments/helm-values/values-int.yaml
@@ -84,7 +84,7 @@ backend:
       nginx.ingress.kubernetes.io/use-regex: "true"
       nginx.ingress.kubernetes.io/enable-cors: "true"
       nginx.ingress.kubernetes.io/proxy-body-size: "8m"
-      nginx.ingress.kubernetes.io/cors-allow-origin: "https://*.int.catena-x.net"
+      nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000, https://*.int.catena-x.net"
     tls:
       - secretName: "portal-backend.int.catena-x.net-tls"
         hosts:
