--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -126,7 +126,7 @@ frontend:
     name: "portal"
     image:
       name: "docker.io/tractusx/portal-frontend"
-      portaltag: 6c767a346badda3d37d813772cef41f69de872da
+      portaltag: v2.1.0
       pullPolicy: "IfNotPresent"
       # -- Pull secrets for private docker registry
       pullSecrets: []
@@ -143,7 +143,7 @@ frontend:
     name: "registration"
     image:
       name: "docker.io/tractusx/portal-frontend-registration"
-      registrationtag: 064a96674c239433e85d2599b17a95c3434e9bb9
+      registrationtag: v2.0.1
       pullPolicy: "IfNotPresent"
       # -- Pull secrets for private docker registry
       pullSecrets: []
@@ -159,7 +159,7 @@ frontend:
     name: "assets"
     image:
       name: "docker.io/tractusx/portal-assets"
-      assetstag: d18bd2c6d11bc637476f9db7cbe3a1df4c9b34e2
+      assetstag: v2.1.0
       pullPolicy: "IfNotPresent"
       # -- Pull secrets for private docker registry
       pullSecrets: []
