--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -141,8 +141,8 @@ spec:
               value: "{{ .Values.backend.placeholder }}"
             - name: "APPLICATIONCHECKLIST__BPDM__USEDIMWALLET"
               value: "{{ .Values.backend.useDimWallet }}"
-            - name: "APPLICATIONCHECKLIST__BPDM__STARTASREADY"
-              value: "{{ .Values.backend.bpdmStartAsReady }}"
+            - name: "APPLICATIONCHECKLIST__BPDM__STARTSHARINGSTATEASREADY"
+              value: "{{ .Values.backend.processesworker.bpdm.startSharingStateAsReady }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__BASEADDRESS"
               value: "{{ .Values.clearinghouseAddress }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTID"
