feat(clearinghouse): add config for maintenance worker
enable maintenance worker to retrigger the clearinghouse process

Refs: https://github.com/eclipse-tractusx/portal-backend/issues/810

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -166,6 +166,8 @@ spec:
               value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__USEDIMWALLET"
               value: "{{ .Values.backend.useDimWallet }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__RETRIGGERENCLEARINGHOUSEINTERVALINDAYS"
+              value: "{{ .Values.backend.processesworker.clearinghouse.retriggerEndClearinghouseIntervalInDays }}"
             - name: "APPLICATIONCHECKLIST__CUSTODIAN__BASEADDRESS"
               value: "{{ .Values.custodianAddress }}"
             - name: "APPLICATIONCHECKLIST__CUSTODIAN__MEMBERSHIPERRORMESSAGE"
