--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -638,6 +638,9 @@ backend:
         memory: 200M
     processIdentity:
       processUserId: d21d2e8a-fe35-483c-b2b8-4100ed7f0953
+    batchDelete:
+      # -- The maximum days a document can stay in state DELETED before it is removed from the database
+      days: 80
     logging:
       default: "Information"
   notification:
@@ -841,6 +844,8 @@ backend:
       # -- Client-secret for clearinghouse client-id. Secret-key 'clearinghouse-client-secret'.
       clientSecret: ""
       callbackPath: "/api/administration/registration/clearinghouse"
+      # -- Defines the days a END_CLEARINGHOUSE process can stay in state TODO before the process is retriggered
+      retriggerEndClearinghouseIntervalInDays: 30
     processes:
       lockExpirySeconds: "300"
     offerSubscriptionProcess:
