fix: add config for sd document
Refs: https://github.com/eclipse-tractusx/portal-backend/issues/813

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -491,6 +491,8 @@ spec:
               value: "{{ .Values.backend.processesworker.mailing.encryptionConfigs.index0.paddingMode }}"
             - name: "APPLICATIONCREATION_USEDIMWALLET"
               value: "{{ .Values.backend.useDimWallet }}"
+            - name: "SELFDESCRIPTIONCREATIONPROCESS__SELFDESCRIPTIONDOCUMENTURL"
+              value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.administration.connectors.selfDescriptionDocumentPath }}"
             ports:
             - name: http
               containerPort: {{ .Values.portContainer }}
