feat(clearinghouse): add config for maintenance worker (#418)
Refs: https://github.com/eclipse-tractusx/portal-backend/issues/810
Reviewed-By: Evelyn Gurschler <evelyn.gurschler@bmw.de>

--- a/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
+++ b/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
@@ -67,6 +67,33 @@ spec:
               {{- end }}
               - name: "PROCESSIDENTITY__PROCESSUSERID"
                 value: "{{ .Values.backend.portalmaintenance.processIdentity.processUserId }}"
+              - name: "BATCHDELETE_DELETEINTERVALINDAYS"
+                value: "{{ .Values.backend.portalmaintenance.batchDelete.days }}"
+              - name: "CLEARINGHOUSE__BASEADDRESS"
+                value: "{{ .Values.clearinghouseAddress }}"
+              - name: "CLEARINGHOUSE__CLIENTID"
+                value: "{{ .Values.backend.processesworker.clearinghouse.clientId }}"
+              - name: "CLEARINGHOUSE__CLIENTSECRET"
+                valueFrom:
+                  secretKeyRef:
+                    name: "{{ .Values.backend.interfaces.secret }}"
+                    key: "clearinghouse-client-secret"
+              - name: "CLEARINGHOUSE__GRANTTYPE"
+                value: "{{ .Values.backend.processesworker.clearinghouse.grantType }}"
+              - name: "CLEARINGHOUSE__TOKENADDRESS"
+                value: "{{ .Values.clearinghouseTokenAddress }}"
+              - name: "CLEARINGHOUSE__PASSWORD"
+                value: "{{ .Values.backend.placeholder }}"
+              - name: "CLEARINGHOUSE__SCOPE"
+                value: "{{ .Values.backend.processesworker.clearinghouse.scope }}"
+              - name: "CLEARINGHOUSE__USERNAME"
+                value: "{{ .Values.backend.placeholder }}"
+              - name: "CLEARINGHOUSE__CALLBACKURL"
+                value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}"
+              - name: "CLEARINGHOUSE__USEDIMWALLET"
+                value: "{{ .Values.backend.useDimWallet }}"
+              - name: "CLEARINGHOUSE__RETRIGGERENDCLEARINGHOUSEINTERVALINDAYS"
+                value: "{{ .Values.backend.processesworker.clearinghouse.retriggerEndClearinghouseIntervalInDays }}"
               - name: "SERILOG__MINIMUMLEVEL__Default"
                 value: "{{ .Values.backend.portalmaintenance.logging.default }}"
             ports:
