--- a/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
+++ b/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
@@ -33,6 +33,10 @@ spec:
       template:
         spec:
           restartPolicy: OnFailure
+          {{- with .Values.backend.portalmaintenance.image.pullSecrets }}
+          imagePullSecrets:
+            {{- toYaml . | nindent 8 }}
+          {{- end }}
           containers:
           - name: {{ include "portal.fullname" . }}-{{ .Values.backend.portalmaintenance.name }}
             securityContext:
