--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -34,6 +34,10 @@ spec:
       template:
         spec:
           restartPolicy: OnFailure
+          {{- with .Values.backend.processesworker.image.pullSecrets }}
+          imagePullSecrets:
+            {{- toYaml . | nindent 8 }}
+          {{- end }}
           containers:
           - name: {{ include "portal.fullname" . }}-{{ .Values.backend.processesworker.name }}
             securityContext:
