--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -604,6 +604,8 @@ backend:
       name: "docker.io/tractusx/portal-portal-migrations"
       portalmigrationstag: 8bb3bfd9dc9c45b170516f5a2387e7b443bb8730
       pullPolicy: "IfNotPresent"
+      # -- Pull secrets for private docker registry
+      pullSecrets: []
     # -- We recommend to review the default resource limits as this should a conscious choice.
     resources:
       requests:
@@ -628,6 +630,8 @@ backend:
       name: "docker.io/tractusx/portal-maintenance-service"
       portalmaintenancetag: b9e89196cf538c76ebe4dc191c6684a017a32140
       pullPolicy: "IfNotPresent"
+      # -- Pull secrets for private docker registry
+      pullSecrets: []
     # -- We recommend to review the default resource limits as this should a conscious choice.
     resources:
       requests:
@@ -760,6 +764,8 @@ backend:
       name: "docker.io/tractusx/portal-provisioning-migrations"
       provisioningmigrationstag: bea374c345aa236eb6e2112734b8e3004c065647
       pullPolicy: "IfNotPresent"
+      # -- Pull secrets for private docker registry
+      pullSecrets: []
     # -- We recommend to review the default resource limits as this should a conscious choice.
     resources:
       requests:
@@ -776,6 +782,8 @@ backend:
       name: "docker.io/tractusx/portal-processes-worker"
       processesworkertag: 8bb3bfd9dc9c45b170516f5a2387e7b443bb8730
       pullPolicy: "IfNotPresent"
+      # -- Pull secrets for private docker registry
+      pullSecrets: []
     # -- We recommend to review the default resource limits as this should a conscious choice.
     resources:
       requests:
