--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -159,7 +159,7 @@ frontend:
     name: "assets"
     image:
       name: "docker.io/tractusx/portal-assets"
-      assetstag: ca3bcaa764fd32eed87682cefd794edd038c3de9
+      assetstag: v2.2.0
       pullPolicy: "IfNotPresent"
       # -- Pull secrets for private docker registry
       pullSecrets: []
