--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -183,7 +183,7 @@ spec:
         - name: "APPLICATIONCHECKLIST__SDFACTORY__SDFACTORYURL"
           value: "{{ .Values.sdfactoryAddress }}{{ .Values.backend.processesworker.sdfactory.selfdescriptionPath }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__CLEARINGHOUSECONNECTDISABLED"
-          value: "{{ .Values.backend.processesworker.clearinghouseConnectDisabled }}"
+          value: "{{ .Values.clearinghouseConnectDisabled }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__USERNAME"
           value: "{{ .Values.backend.placeholder }}"
         - name: "APPLICATIONCHECKLIST__DIM__USERNAME"
@@ -281,7 +281,7 @@ spec:
         - name: "CONNECTORS__SELFDESCRIPTIONDOCUMENTURL"
           value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.administration.connectors.selfDescriptionDocumentPath }}"
         - name: "CONNECTORS__CLEARINGHOUSECONNECTDISABLED"
-          value: "{{ .Values.backend.processesworker.clearinghouseConnectDisabled }}"
+          value: "{{ .Values.clearinghouseConnectDisabled }}"
         - name: "DOCUMENT__ENABLESEEDENDPOINT"
           value: "True"
         - name: "DOCUMENT__FRAMEDOCUMENTTYPEIDS__0"
@@ -448,7 +448,7 @@ spec:
         - name: "REGISTRATION__USEDIMWALLET"
           value: "{{ .Values.backend.useDimWallet }}"
         - name: "REGISTRATION__CLEARINGHOUSECONNECTDISABLED"
-          value: "{{ .Values.backend.processesworker.clearinghouseConnectDisabled }}"
+          value: "{{ .Values.clearinghouseConnectDisabled }}"
         - name: "SERVICEACCOUNT__CLIENTID"
           value: "{{ .Values.backend.administration.serviceAccount.clientId }}"
         - name: "SERVICEACCOUNT__ENCRYPTIONCONFIGINDEX"
