build: add dimUserRole config
Refs: https://github.com/eclipse-tractusx/portal-backend/issues/1007

--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -262,6 +262,10 @@ spec:
           value: "{{ .Values.decentralIdentityManagementAuthAddress }}"
         - name: "APPMARKETPLACE__ISSUERDID"
           value: "{{ .Values.backend.administration.issuerdid }}"
+        - name: "APPMARKETPLACE__DIMUSERROLES__0__CLIENTID"
+          value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
+        - name: "APPMARKETPLACE__DIMUSERROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.administration.serviceAccount.dimCreationRoles.role0 }}"
         - name: "APPMARKETPLACE__BPNDIDRESOLVERURL"
           value: "{{ .Values.bpnDidResolver.directoryApiAddress }}"
         - name: "HEALTHCHECKS__0__PATH"
