--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -243,6 +243,10 @@ spec:
           value: "{{ .Values.centralidp.clients.portal }}"
         - name: "SERVICES__COMPANYADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.companyAdminRoles.role0 }}"
+        - name: "SERVICES__DIMUSERROLES__0__CLIENTID"
+          value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
+        - name: "SERVICES__DIMUSERROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.administration.serviceAccount.dimCreationRoles.role0 }}"
         - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGINDEX"
           value: "{{ .Values.backend.processesworker.mailing.encryptionConfigIndex }}"
         - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGS__0__INDEX"
