fix(osp path): update osp path to camelCase to sync it with the portal-frontend code

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -896,7 +896,7 @@ backend:
           encryptionKey: ""
     networkRegistration:
       loginDocumentPath: "/documentation/?path=docs%2F09.+Others%28s%29%2F01.+Login.md"
-      externalRegistrationPath: "/consent_osp"
+      externalRegistrationPath: "/consentOsp"
       # -- The logic to decline an application is not yet implemented in the backend - this will currently lead to a 404 page when clicking on the link in the mail
       closeApplicationPath: "/decline"
     dim:
